# webkaya-browser

./: .gitignore  GETTING_STARTED.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.browser.config.ts  vitest.config.ts
docs/: DEPLOYMENT_AND_DATASETS.md  ML_RUNTIME.md  ROADMAP_APP_ROUTER.md  design-review-local-first-wasm.md
examples/local-data-analyst/: README.md  app.js  index.html  privacy.js
examples/webkaya-demo/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
python/: README.md  pyproject.toml
python/examples/: agent_demo.py  cluster_agent_demo.py  cluster_demo.py  multi_endpoint_demo.py
python/src/webkaya/: __init__.py  asm.py  ebpf.py  llm.py  memory.py  net.py  policy.py  probes.py  redis_memory.py  sandbox.py
python/tests/: test_ebpf.py  test_llm.py  test_multi_endpoint.py  test_net_memory.py  test_probes.py  test_redis_memory.py  test_sandbox.py
src/: index.ts
src/data/: data-worker.ts  image-feature-worker.ts  indexeddb.ts  insights.ts  intelligent-preprocess.ts  kaggle-download-client.ts  parsers.ts  preprocess.ts
tests/: algorithms.test.ts  backends.test.ts  data-agent.test.ts  ebpf-vm.test.ts  exporter.test.ts  fabric.test.ts  insights.test.ts  intelligent-preprocess.test.ts  llm.test.ts  orchestration.test.ts  parsers-streaming.test.ts  policy.test.ts  preprocess.test.ts  probes.test.ts  python.test.ts  random-forest.test.ts  sandbox.test.ts  tiered-memory.test.ts  wasm-function-editor.test.ts  wasm-runtime.test.ts  worker-runtime.test.ts
(+100 files in other folders)
